--- a/BigMouth.csproj
+++ b/BigMouth.csproj
@@ -7,6 +7,8 @@
         <Version>1.0.0</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
+
+        <DebugType>embedded</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
